Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29515

innodb.deadlock_victim_race is unstable

    XMLWordPrintable

Details

    Description

      innodb.deadlock_victim_race 'innodb'     w3 [ fail ]
              Test ended at 2022-09-01 13:58:59
       
      CURRENT_TEST: innodb.deadlock_victim_race
      mysqltest: At line 79: query 'SELECT * FROM t WHERE a = 10 FOR UPDATE' succeeded - should have failed with error ER_LOCK_WAIT_TIMEOUT (1205)...
      

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              vlad.lesin Vladislav Lesin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 4.5h
                  1d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.